@@ -13,15 +13,15 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 
 public class CertificateServiceImpl implements CertificateService {
 
     private final CertificateRepository certificateRepository;
     private final CertificateMapper certificateMapper;
+
 
     @Autowired
     public CertificateServiceImpl(CertificateRepository certificateRepository, CertificateMapper certificateMapper) {
@@ -41,6 +41,7 @@ public class CertificateServiceImpl implements CertificateService {
     public CertificateDto getCertificate(Long certificateId) {
         Certificate certificate = certificateRepository.findById(certificateId)
                 .orElseThrow(() -> new CertificateNotFoundException("Certificate is not found with that id:" + certificateId));
+        certificate.getDocuments().size();
         return certificateMapper.toCertificateDto(certificate);
     }
 
@@ -66,22 +67,37 @@ public class CertificateServiceImpl implements CertificateService {
     public CertificateDto updateCertificate(Long certificateId,CertificateDto updateCertificate) {
         Certificate certificate = certificateRepository.findById(certificateId)
                 .orElseThrow(() -> new CertificateNotFoundException("Certificate is not found with that id:" + certificateId));
+        System.out.println("Updating Certificate ID: " + certificateId);
+        System.out.println("Received Data: " + updateCertificate.getDocuments());
+        System.out.println("Status: " + updateCertificate.getStatus());
+        System.out.println("File Path: " + updateCertificate.getFilePaths());
+
         certificate.setCertificationName(updateCertificate.getCertificationName());
         certificate.setIssuedBy(updateCertificate.getIssuedBy());
         certificate.setLicenseNumber(updateCertificate.getLicenseNumber());
         certificate.setUrl(updateCertificate.getUrl());
         certificate.setStartDate(updateCertificate.getStartDate());
         certificate.setEndDate(updateCertificate.getEndDate());
-        certificate.setStatus(updateCertificate.getStatus());
-        certificate.setRemainingDays(Math.max(java.time.temporal.ChronoUnit.DAYS.between(java.time.LocalDate.now(), certificate.getEndDate()),0));
-        if(updateCertificate.getDocuments() != null && !updateCertificate.getDocuments().isEmpty()) {
+        certificate.setStatus(updateCertificate.getStatus() != null ? updateCertificate.getStatus() : "ACTIVE");
+        if (certificate.getEndDate() != null) {
+            certificate.setRemainingDays(Math.max(java.time.temporal.ChronoUnit.DAYS.between(
+                    java.time.LocalDate.now(), certificate.getEndDate()), 0));
+        } else {
+            certificate.setRemainingDays(0L);
+        }        if(updateCertificate.getDocuments() != null) {
+//            System.out.println("Updating Documents" + updateCertificate.getDocuments());
             List<Document> updatedDocuments = updateCertificate.getDocuments()
                     .stream()
-                    .map(dto -> certificateMapper.toDocumentEntity(dto, certificate)) // ✅ Convert DTOs to Entity
-                    .collect(Collectors.toList());
-            certificate.setDocuments(updatedDocuments);
+                    .map(dto -> certificateMapper.toDocumentEntity(dto, certificate))
+                    .toList();
+            if (certificate.getDocuments() == null) {
+                certificate.setDocuments(new ArrayList<>());
+            }
+            certificate.getDocuments().clear();
+            certificate.getDocuments().addAll(updatedDocuments);
         }
-        return certificateMapper.toCertificateDto(certificateRepository.save(certificate));
+        Certificate savedCertificate = certificateRepository.save(certificate);
+        return certificateMapper.toCertificateDto(savedCertificate);
     }
 
     @Override
